introduced selector, and fixed some bugs

--- a/packages/styles/src/_interactive.scss
+++ b/packages/styles/src/_interactive.scss
@@ -10,3 +10,9 @@
 	width: 100%;
 	height: 100%;
 }
+
+.#{$prefix}-selector {
+	position: absolute;
+	background: $selector-color;
+	border: $selector-border;
+}
