--- a/packages/styles/src/_interactive.scss
+++ b/packages/styles/src/_interactive.scss
@@ -15,6 +15,10 @@
 	right: 0;
 }
 
+.#{$prefix}-interactive * {
+	box-sizing: border-box;
+}
+
 .#{$prefix}-selector {
 	position: absolute;
 	background: $selector-color;
